# qomp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Changelog.txt  Info.plist  README  conf.pri  copyright-deb.in  qomp.desktop  qomp.pro  qomp.rc  setver.sh  themes.pri  translations.pri
libqomp/: CMakeLists.txt  libqomp.pro
libqomp/include/: common.h  defines.h  libqomp_global.h  pluginmanager.h  qompbusylabel.h  qompmetadataresolver.h  qompoptionspage.h  qomppluginaction.h  qompplugingettunesdlg.h  qompplugintreemodel.h  qompplugintypes.h  qompqmlengine.h  qomptunepluign.h
libqomp/src/: common.cpp  common.h  covercache.cpp  covercache.h  defines.h  extendedcombobox.cpp  extendedcombobox.h  filesystemhelper.cpp  filesystemhelper.h  gettuneurlhelper.cpp  gettuneurlhelper.h  icons.qrc  libqomp_global.h  options.cpp  options.h  playlistparser.cpp  playlistparser.h  pluginhost.cpp  pluginhost.h  pluginmanager.cpp  pluginmanager.h  qml.qrc  qompactionslist.cpp  qompactionslist.h  qompmetadataresolver.cpp  qompmetadataresolver.h  qompnetworkingfactory.cpp  qompnetworkingfactory.h  qompplayer.cpp  qompplayer.h  qompplayercontrol.h  qompplayerimpl.cpp  qompplayerimpl.h  qompqmlengine.cpp  qompqmlengine.h  scaler.cpp  scaler.h  src.pri  taghelpers.cpp  taghelpers.h  (+6 more)
libqomp/src/frameless/: advwidget.cpp  advwidget.h  frameless.pri  windowheader.cpp  windowheader.h  windowheader.ui
libqomp/src/options/: options.pri  qompoptionspage.h
libqomp/src/plugins/: plugins.pri  qompplayerstatusplugin.h  qompplugin.h  qomppluginaction.cpp  qomppluginaction.h  qompplugincaptchadialog.cpp  qompplugincaptchadialog.h  qompplugincontroller.cpp  qompplugincontroller.h  qompplugingettunesdlg.cpp  qompplugingettunesdlg.h  qompplugingettunesdlg.ui  qompplugingettunesdlg_mobile.cpp  qompplugintreemodel.cpp  qompplugintreemodel.h  qompplugintreeview.cpp  qompplugintreeview.h  qompplugintypes.cpp  qompplugintypes.h  qomptunepluign.h
libqomp/src/qmlshared/: BasePage.qml  ButtonsPage.qml  GetTunesDlg.qml  Line.qml  LineEdit.qml  Menu.qml  MenuItem.qml  OptionsEntry.qml  PageTitle.qml  QompAppWindow.qml  QompBaseDialog.qml  QompBusyIndicator.qml  QompButton.qml  QompCaptchaDlg.qml  QompCheckBox.qml  QompComboBox.qml  QompFileDlg.qml  QompImage.qml  QompMenuButton.qml  QompPluginsSearchListView.qml  QompPluginsSearchTabbedView.qml  QompPluginsSearchView.qml  QompSideBar.qml  QompSideBarAction.qml  QompSlider.qml  QompStackView.qml  QompToolButton.qml  TextLineEdit.qml  TickerLabel.qml  qmldir
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/cuteradioplugin/: CMakeLists.txt  cuteradiocontroller.cpp  cuteradiocontroller.h  cuteradiomodel.cpp  cuteradiomodel.h  cuteradioplugin.cpp  cuteradioplugin.h  cuteradioplugin.pro  cuteradioplugindefines.h  cuteradioplugingettunesdialog.cpp  cuteradioplugingettunesdialog.h  cuteradioplugingettunesdialog.ui  cuteradioplugingettunesdialog_mobile.cpp  metadata.json  qml.qrc
plugins/cuteradioplugin/qml/: CuteRadioResultsView.qml
plugins/deezerplugin/: CMakeLists.txt  deezerauth.cpp  deezerauth.h  deezergettunesdlg.cpp  deezergettunesdlg.h  deezerplugin.cpp  deezerplugin.h  deezerplugin.pro  deezerplugindefines.h  metadata.json
plugins/filesystemplugin/: CMakeLists.txt  cueparser.cpp  cueparser.h  filesystemcommon.cpp  filesystemcommon.h  filesystemplugin.cpp  filesystemplugin.h  filesystemplugin.pro  metadata.json
plugins/lastfmplugin/: CMakeLists.txt  lastfmauthdlg.cpp  lastfmauthdlg.h  lastfmdefines.h  lastfmplugin.cpp  lastfmplugin.h  lastfmplugin.pro  lastfmsettings.cpp  lastfmsettings.h  lastfmsettings.ui  metadata.json  qml.qrc
plugins/mprisplugin/: CMakeLists.txt  metadata.json  mprisadapter.cpp  mprisadapter.h  mpriscontroller.cpp  mpriscontroller.h  mprisplugin.cpp  mprisplugin.h  mprisplugin.pro  rootadapter.cpp  rootadapter.h  signalhandler.cpp  signalhandler.h
plugins/myzukaruplugin/: CMakeLists.txt  metadata.json  myzukarucontroller.cpp  myzukarucontroller.h  myzukarudefines.h  myzukarugettunesdlg.cpp  myzukarugettunesdlg.h  myzukarugettunesdlg_mobile.cpp  myzukarumodels.cpp  myzukarumodels.h  myzukaruplugin.cpp  myzukaruplugin.h  myzukaruplugin.pro  myzukaruresolvestrategy.cpp  myzukaruresolvestrategy.h  qml.qrc
plugins/notificationsplugin/: CMakeLists.txt  dbusnotifier.cpp  dbusnotifier.h  metadata.json  notificationsplugin.cpp  notificationsplugin.h  notificationsplugin.pro
plugins/poiskmplugin/: CMakeLists.txt  metadata.json  poiskmcontroller.cpp  poiskmcontroller.h  poiskmplugin.cpp  poiskmplugin.h  poiskmplugin.pro  poiskmplugindefines.h  poiskmplugingettunesdialog.cpp  poiskmplugingettunesdialog.h  poiskmplugingettunesdialog_mobile.cpp  poiskmpluginresultswidget.ui  poiskmurlresolvestrategy.cpp  poiskmurlresolvestrategy.h  qml.qrc
plugins/prostopleerplugin/: CMakeLists.txt  metadata.json  prostopleercontroller.cpp  prostopleercontroller.h  prostopleerplugin.cpp  prostopleerplugin.h  prostopleerplugin.pro  prostopleerplugindefines.h  prostopleerplugingettunesdialog.cpp  prostopleerplugingettunesdialog.h  prostopleerplugingettunesdialog_mobile.cpp  prostopleerpluginsettings.cpp  prostopleerpluginsettings.h  prostopleerpluginsettings.ui  prostopleerpluginsettings_mobile.cpp  qml.qrc
plugins/tunetofileplugin/: CMakeLists.txt  metadata.json  tune2fileplugin.cpp  tune2fileplugin.h  tunetofileplugin.cpp  tunetofileplugin.h  tunetofileplugin.pro  tunetofilesettings.cpp  tunetofilesettings.h  tunetofilesettings.ui
plugins/urlplugin/: CMakeLists.txt  metadata.json  qml.qrc  urlplugin.cpp  urlplugin.h  urlplugin.pro
plugins/yandexmusicplugin/: CMakeLists.txt  metadata.json  qml.qrc  yandexmusiccaptcha.cpp  yandexmusiccaptcha.h  yandexmusiccontroller.cpp  yandexmusiccontroller.h  yandexmusicgettunsdlg.cpp  yandexmusicgettunsdlg.h  yandexmusicgettunsdlg_mobile.cpp  yandexmusicoauth.cpp  yandexmusicoauth.h  yandexmusicplugin.cpp  yandexmusicplugin.h  yandexmusicplugin.pro  yandexmusicsettings.cpp  yandexmusicsettings.h  yandexmusicsettings.ui  yandexmusicurlresolvestrategy.cpp  yandexmusicurlresolvestrategy.h
(+243 files in other folders)
